CHATS_SIT/force-app/main/default/objects/T_INDIV_REL__c.object
<CustomObject>
    <description>Information on how individuals on the case are related to the primary applicant</description>
     <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>CDE_SOURCE_VRFYD_REL__c</fullName>
        <description>How Verified</description>
        <label>How Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00698</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_REL_INDIV__c</fullName>
        <description>Relationship</description>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00243</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Details__c</fullName>
        <formula>&apos;Client ID : &apos;+  IDN_CLIENT_RELTD__r.Name &amp; BR() &amp;
&apos;First Name : &apos;+IDN_CLIENT_RELTD__r.NAM_FIRST__c &amp; BR() &amp;
&apos;Last Name : &apos;+IDN_CLIENT_RELTD__r.NAM_LAST__c &amp; BR() &amp;
&apos;Age : &apos;+TEXT(IDN_CLIENT_RELTD__r.Age__c) &amp; BR() &amp;
&apos;Gender : &apos;+ CASE(TEXT(IDN_CLIENT_RELTD__r.CDE_GENDER__c),
  &quot;1&quot;, &quot;Male&quot;,
  &quot;2&quot;, &quot;Female&quot;,
  &quot;N/A&quot;) &amp; BR() &amp;
&apos;State ID : &apos;+IDN_CLIENT_RELTD__r.IDN_STATE__c</formula>
        <label>Client Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT_RELTD__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Relationship (Client ID)</relationshipLabel>
        <relationshipName>Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Client ID</description>
        <label>Primary Caretaker</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Relationship</relationshipLabel>
        <relationshipName>Primary_Individual_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Caretaker_Details__c</fullName>
        <formula>&apos;Primary Caretaker : &apos;+ IDN_CLIENT__r.Name &amp; BR() &amp; 
&apos;First Name : &apos;+IDN_CLIENT__r.NAM_FIRST__c &amp; BR() &amp; 
&apos;Last Name : &apos;+IDN_CLIENT__r.NAM_LAST__c &amp; BR() &amp; 
&apos;Age : &apos;+TEXT(IDN_CLIENT__r.Age__c) &amp; BR() &amp; 
&apos;Gender : &apos;+ CASE(TEXT(IDN_CLIENT__r.CDE_GENDER__c), 
&quot;1&quot;, &quot;Male&quot;, 
&quot;2&quot;, &quot;Female&quot;, 
&quot;N/A&quot;) &amp; BR() &amp; 
&apos;State ID : &apos;+IDN_CLIENT__r.IDN_STATE__c</formula>
        <label>Primary Caretaker Details</label>
        <type>Text</type>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>How_Verified_Required</fullName>
        <active>true</active>
        <description>How Verified field  cannot be empty if Relationship is selected as &quot;No Relation&quot;</description>
        <errorConditionFormula>NOT( IDN_CLIENT_RELTD__r.Is_Peak_Data__c ) &amp;&amp; NOT( IDN_CLIENT_RELTD__r.Is_CBMS_Data__c ) &amp;&amp; NOT(  IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(  IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp;
ISPICKVAL(CDE_TYPE_REL_INDIV__c,&quot;V&quot;)&amp;&amp; ISBLANK(TEXT(CDE_SOURCE_VRFYD_REL__c))</errorConditionFormula>
        <errorDisplayField>CDE_SOURCE_VRFYD_REL__c</errorDisplayField>
        <errorMessage>How Verified field  cannot be empty if Relationship is selected as &quot;Written Verification&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Care_Taker_cannot_have_self_rel</fullName>
        <active>true</active>
        <description>Client ID/Primary Caretaker cannot have Self Relationship</description>
        <errorConditionFormula>IDN_CLIENT_RELTD__c   =   IDN_CLIENT__c</errorConditionFormula>
        <errorMessage>The Primary Caretaker and Client ID selected may not be for the same individual.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_HowVerified_if_Verified_Written</fullName>
        <active>true</active>
        <description>How Verified is required where Verified is Written Verification.</description>
        <errorConditionFormula>
            OR( AND( ISNEW(), NOT( IDN_CLIENT_RELTD__r.Is_Peak_Data__c ), NOT(  IDN_CLIENT__r.Is_Peak_Data__c), TEXT(CDE_TYPE_VERIF__c) = &apos;V&apos; , ISBLANK(TEXT(CDE_SOURCE_VRFYD_REL__c) ) ),
	            AND( NOT( ISNEW() ), NOT( ISCHANGED( DTE_END_EFFV__c ) ), NOT( IDN_CLIENT_RELTD__r.Is_Peak_Data__c ), NOT(  IDN_CLIENT__r.Is_Peak_Data__c), TEXT(CDE_TYPE_VERIF__c) = &apos;V&apos; , ISBLANK(TEXT(CDE_SOURCE_VRFYD_REL__c) ) )
              )     
        </errorConditionFormula>
        <errorDisplayField>CDE_SOURCE_VRFYD_REL__c</errorDisplayField>
        <errorMessage>How Verified is required where Verified is Written Verification.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verified_Required</fullName>
        <active>true</active>
        <description>Verified field  cannot be empty if Relationship is selected as &quot;No Relation&quot;</description>
        <errorConditionFormula>NOT( IDN_CLIENT_RELTD__r.Is_Peak_Data__c ) &amp;&amp; NOT(  IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; ISPICKVAL(CDE_TYPE_REL_INDIV__c,&quot;NR&quot;)&amp;&amp; ISBLANK(TEXT(CDE_TYPE_VERIF__c))</errorConditionFormula>
        <errorDisplayField>CDE_TYPE_VERIF__c</errorDisplayField>
        <errorMessage>Verified field  cannot be empty if Relationship is selected as &quot;No Relation&quot;</errorMessage>
    </validationRules>
</CustomObject>