CHATS_SIT/force-app/main/default/objects/T_INDIV_REL__c/validationRules/How_Verified_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>How_Verified_Required</fullName>
    <active>true</active>
    <description>How Verified field  cannot be empty if Relationship is selected as &quot;No Relation&quot;</description>
    <errorConditionFormula>NOT( IDN_CLIENT_RELTD__r.Is_Peak_Data__c ) &amp;&amp; NOT( IDN_CLIENT_RELTD__r.Is_CBMS_Data__c ) &amp;&amp; NOT(  IDN_CLIENT__r.Is_Peak_Data__c) &amp;&amp; NOT(  IDN_CLIENT__r.Is_CBMS_Data__c) &amp;&amp;
ISPICKVAL(CDE_TYPE_REL_INDIV__c,&quot;V&quot;)&amp;&amp; ISBLANK(TEXT(CDE_SOURCE_VRFYD_REL__c))</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFYD_REL__c</errorDisplayField>
    <errorMessage>How Verified field  cannot be empty if Relationship is selected as &quot;Written Verification&quot;</errorMessage>
</ValidationRule>