CHATS_SIT/force-app/main/default/objects/T_INDIV_REL__c/validationRules/Primary_Care_Taker_cannot_have_self_rel.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Care_Taker_cannot_have_self_rel</fullName>
    <active>true</active>
    <description>Client ID/Primary Caretaker cannot have Self Relationship</description>
    <errorConditionFormula>IDN_CLIENT_RELTD__c   =   IDN_CLIENT__c</errorConditionFormula>
    <errorMessage>The Primary Caretaker and Client ID selected may not be for the same individual.</errorMessage>
</ValidationRule>