CHATS_SIT/force-app/main/default/objects/T_INDIV_REL__c/validationRules/Require_HowVerified_if_Verified_Written.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_HowVerified_if_Verified_Written</fullName>
    <active>true</active>
    <description>How Verified is required where Verified is Written Verification.</description>
    <errorConditionFormula>OR( AND( ISNEW(), NOT( IDN_CLIENT_RELTD__r.Is_Peak_Data__c ), NOT(  IDN_CLIENT__r.Is_Peak_Data__c), TEXT(CDE_TYPE_VERIF__c) = &apos;V&apos; , ISBLANK(TEXT(CDE_SOURCE_VRFYD_REL__c) ) ),
	            AND( NOT( ISNEW() ), NOT( ISCHANGED( DTE_END_EFFV__c ) ), NOT( IDN_CLIENT_RELTD__r.Is_Peak_Data__c ), NOT(  IDN_CLIENT__r.Is_Peak_Data__c), TEXT(CDE_TYPE_VERIF__c) = &apos;V&apos; , ISBLANK(TEXT(CDE_SOURCE_VRFYD_REL__c) ) )
              )</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFYD_REL__c</errorDisplayField>
    <errorMessage>How Verified is required where Verified is Written Verification.</errorMessage>
</ValidationRule>