CHATS_SIT/force-app/main/default/objects/T_INDIV_REL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CDE_TYPE_REL_INDIV__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_TYPE_REL_INDIV__c</field>
        <operation>equals</operation>
        <value>SO</value>
    </filters>
    <label>All</label>
</ListView>